| Bug #38135 | Assertion failed: save_errno, file .\ma_update.c, line 200 | ||
|---|---|---|---|
| Submitted: | 15 Jul 2008 13:22 | Modified: | 8 Jan 2009 11:03 |
| Reporter: | Shane Bester (Platinum Quality Contributor) | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Maria storage engine | Severity: | S1 (Critical) |
| Version: | 5.1.25-maria-alpha-debug/6.0.6-maria | OS: | Windows |
| Assigned to: | Sergei Golubchik | CPU Architecture: | Any |
[15 Jul 2008 13:22]
Shane Bester
[15 Jul 2008 13:23]
MySQL Verification Team
import against debug mysqld build, using mysql command line client
Attachment: bug38135_testcase.sql (application/unknown, text), 11.01 KiB.
[15 Jul 2008 15:52]
MySQL Verification Team
Thank you for the bug report. 6.0.6 Call stack:
thd: 0x3375d98
Attempting backtrace. You can use the following information to find out
where mysqld died. If you see no messages after this, something went
terribly wrong...
00A7F0D4 mysqld.exe!_NMSG_WRITE()[crt0msg.c:195]
00A6D71A mysqld.exe!abort()[abort.c:44]
00A68342 mysqld.exe!_assert()[assert.c:306]
00A05D42 mysqld.exe!maria_update()[ma_update.c:200]
009BCC11 mysqld.exe!ha_maria::update_row()[ha_maria.cc:1853]
0047450B mysqld.exe!handler::ha_update_row()[handler.cc:5337]
00718E69 mysqld.exe!mysql_update()[sql_update.cc:640]
0065F725 mysqld.exe!mysql_execute_command()[sql_parse.cc:2852]
006670DD mysqld.exe!mysql_parse()[sql_parse.cc:5820]
0065C313 mysqld.exe!dispatch_command()[sql_parse.cc:1051]
0065BB2D mysqld.exe!do_command()[sql_parse.cc:724]
00768047 mysqld.exe!handle_one_connection()[sql_connect.cc:1153]
008378BD mysqld.exe!pthread_start()[my_winthread.c:86]
00A70A77 mysqld.exe!_threadstart()[thread.c:196]
7C80B713 kernel32.dll!GetModuleFileNameA()
Trying to get some variables.
Some pointers may be invalid and cause the dump to abort...
thd->query at 033ECB40=update ignore `table66` set `col165`=repeat('a',7000)
thd->thread_id=1
thd->killed=NOT_KILLED
[11 Aug 2008 10:21]
Sergei Golubchik
mysqld: ma_key_recover.c:68: _ma_unpin_all_pages: Assertion `!pinned_page->changed || undo_lsn != ((LSN)0) || !info->s->now_transactional' failed.
[14 Sep 2008 0:14]
Bugs System
Pushed into 6.0.6-alpha (revid:serg@mysql.com-20080811144032-zp17v994wnfequqk) (version source revid:lars-erik.bjork@sun.com-20080717135217-z3zlwwy465hmc20e) (pib:3)
[8 Jan 2009 11:03]
MC Brown
Internal only. No documentation needed.
